# m3sh

./: .buildinfo  .gitignore  LICENSE  README.md  basics.html  genindex.html  helper.html  index.html  iterators.html  mesh.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  usage.html  vis.html
.doctrees/: basics.doctree  helper.doctree  index.doctree  iterators.doctree  mesh.doctree  usage.doctree  vis.doctree
_modules/: index.html
_sources/: basics.rst.txt  index.rst.txt  iterators.rst.txt  usage.rst.txt
api/: m3sh.flags.FaceFlag.RESERVED.html  m3sh.flags.FaceFlag.__contains__.html  m3sh.flags.FaceFlag.__getitem__.html  m3sh.flags.FaceFlag.__iter__.html  m3sh.flags.FaceFlag.__len__.html  m3sh.flags.FaceFlag.html  m3sh.flags.HalfedgeFlag.CREASE.html  m3sh.flags.HalfedgeFlag.SEAM.html  m3sh.flags.HalfedgeFlag.__contains__.html  m3sh.flags.HalfedgeFlag.__getitem__.html  m3sh.flags.HalfedgeFlag.__iter__.html  m3sh.flags.HalfedgeFlag.__len__.html  m3sh.flags.HalfedgeFlag.html  m3sh.flags.VertexFlag.CORNER.html  m3sh.flags.VertexFlag.FIXED.html  m3sh.flags.VertexFlag.__contains__.html  m3sh.flags.VertexFlag.__getitem__.html  m3sh.flags.VertexFlag.__iter__.html  m3sh.flags.VertexFlag.__len__.html  m3sh.flags.VertexFlag.html  m3sh.flags.html  m3sh.hds.Face.__contains__.html  m3sh.hds.Face.__getitem__.html  m3sh.hds.Face.__index__.html  m3sh.hds.Face.__int__.html  m3sh.hds.Face.__iter__.html  m3sh.hds.Face.__len__.html  m3sh.hds.Face.barycenter.html  m3sh.hds.Face.boundary.html  m3sh.hds.Face.deleted.html  m3sh.hds.Face.flags.html  (+334 more)
(+761 files in other folders)
